--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ body {
     border-bottom: 1px solid rgba(var(--color-border-rgb), 0.3);
     transition: background-color 0.2s ease;
     background-color: rgba(var(--color-panel-bg-rgb), 0.1);
+    padding-right: 25px;
     margin-bottom: 2px;
     border-radius: 3px;
 }
